--- a/build.xml
+++ b/build.xml
@@ -62,13 +62,14 @@
   <!-- set to master if you want latest code -->
   <property name="cen.rules.version" value="1.3.6a" />
   <property name="cen.rules.version.download" value="${cen.rules.version}" />
+  <property name="cen.download.url.owner" value="phax" />
   <property name="cen.download.url.prefix"
-    value="https://github.com/phax/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
+    value="https://github.com/${cen.download.url.owner}/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
   <property name="cen.download.url.ubl"
     value="${cen.download.url.prefix}/en16931-ubl-${cen.rules.version.download}.zip" />
   <property name="cen.download.url.cii"
     value="${cen.download.url.prefix}/en16931-cii-${cen.rules.version.download}.zip" />
-  <property name="cen.download.url.master.prefix" value="https://github.com/phax/eInvoicing-EN16931/"/>
+  <property name="cen.download.url.master.prefix" value="https://github.com/${cen.download.url.owner}/eInvoicing-EN16931/"/>
 
 
   <!-- XRechnung Schematron Rules section -->
