--- a/build.xml
+++ b/build.xml
@@ -16,8 +16,8 @@
   <property name="testsuite.instances.dir" location="${test.build.dir}/testsuite" />
 
   <!-- Naming -->
-  <property name="xrechnung.version.major.minor" value="2.1" />
-  <property name="xrechnung.version.patch" value="1" />
+  <property name="xrechnung.version.major.minor" value="2.2" />
+  <property name="xrechnung.version.patch" value="0" />
   <property name="xrechnung.version"
     value="${xrechnung.version.major.minor}.${xrechnung.version.patch}" />
   <property name="cen.spec.id" value="urn:cen.eu:en16931:2017" />
@@ -62,21 +62,22 @@
   <!-- set to master if you want latest code -->
   <property name="cen.rules.version" value="1.3.6a" />
   <property name="cen.rules.version.download" value="${cen.rules.version}" />
+  <property name="cen.download.url.owner" value="phax" />
   <property name="cen.download.url.prefix"
-    value="https://github.com/phax/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
+    value="https://github.com/${cen.download.url.owner}/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
   <property name="cen.download.url.ubl"
     value="${cen.download.url.prefix}/en16931-ubl-${cen.rules.version.download}.zip" />
   <property name="cen.download.url.cii"
     value="${cen.download.url.prefix}/en16931-cii-${cen.rules.version.download}.zip" />
-  <property name="cen.download.url.master.prefix" value="https://github.com/phax/eInvoicing-EN16931/"/>
+  <property name="cen.download.url.master.prefix" value="https://github.com/${cen.download.url.owner}/eInvoicing-EN16931/"/>
 
 
   <!-- XRechnung Schematron Rules section -->
   <!-- build date might get deprecated in future: check on this -->
-  <property name="xrechnung.build.date" value="2021-11-15" />
+  <property name="xrechnung.build.date" value="2022-01-31" />
   <!-- XRechnung Schematron -->
-  <property name="xr.schematron.version.major.minor" value="1.6" />
-  <property name="xr.schematron.version.patch" value="1" />
+  <property name="xr.schematron.version.major.minor" value="1.7" />
+  <property name="xr.schematron.version.patch" value="0" />
   <property name="xr.schematron.version.full"
     value="${xr.schematron.version.major.minor}.${xr.schematron.version.patch}" />
   <property name="xr.schematron.download.url.prefix"
@@ -243,7 +244,7 @@
   <target name="provide-validator" depends="init, retrieve-validator"
     description="Download KoSIT validation tool and add jar to library directory">
 
-    <echo message="Unpacking Validator reosurces" />
+    <echo message="Unpacking Validator resources" />
 
     <unzip src="${download.dir}/${validator.zip}" dest="${lib.dir}">
       <patternset>
@@ -560,6 +561,8 @@
       <arg value="-r" />
       <arg value="${build.dir}" />
       <arg value="--html" />
+      <arg value="--log-level" />
+      <arg value="info" />
       <arg value="--check-assertions" />
       <arg value="${test.src.dir}/assertions.xml" />
       <arg value="-o" />
@@ -641,6 +644,7 @@
         <!-- Local files - not in repository -->
         <include name="XRechnung-CEFACT*.xml"/>
       </fileset>
+      <fileset dir="${test.src.dir}/integration"></fileset>
     </copy>
     
     <echo>Creating validation reports with ${lib.dir}/${validator.jar} for ${test.docs.integration.dir}</echo>
