--- a/build.xml
+++ b/build.xml
@@ -59,10 +59,10 @@
   <property name="ubl.download.url"
     value="${ubl.download.url.prefix}/${ubl.schema.zip}" />
 
-  <!-- set to master if you want latest code -->
-  <property name="cen.rules.version" value="1.3.6a" />
+  <!-- set to "master" if you want latest code -->
+  <property name="cen.rules.version" value="1.3.7" />
   <property name="cen.rules.version.download" value="${cen.rules.version}" />
-  <property name="cen.download.url.owner" value="phax" />
+  <property name="cen.download.url.owner" value="ConnectingEurope" />
   <property name="cen.download.url.prefix"
     value="https://github.com/${cen.download.url.owner}/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
   <property name="cen.download.url.ubl"
@@ -86,7 +86,7 @@
   <property name="xr.schematron.zip"
     value="xrechnung-${xrechnung.version}-schematron-${xr.schematron.version.full}.zip" />
 
-  <property name="xr.testsuite.version" value="2021-11-15" />
+  <property name="xr.testsuite.version" value="2022-01-31" />
   <property name="xr.testsuite.download.url.prefix"
     value="https://github.com/itplr-kosit/xrechnung-testsuite/releases/download" />
 
