--- a/build.xml
+++ b/build.xml
@@ -25,7 +25,7 @@
     value="${cen.spec.id}#compliant#urn:xoev-de:kosit:standard:xrechnung_${xrechnung.version.major.minor}" />
 
 
-  <property name="validator.configuration.version.full" value="2021-03-31-SNAPSHOT" />
+  <property name="validator.configuration.version.full" value="2022-02-07" />
   <property name="dist.name"
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
   <!-- 3rd party resources -->
@@ -77,7 +77,7 @@
   <property name="xrechnung.build.date" value="2022-01-31" />
   <!-- XRechnung Schematron -->
   <property name="xr.schematron.version.major.minor" value="1.7" />
-  <property name="xr.schematron.version.patch" value="0" />
+  <property name="xr.schematron.version.patch" value="1" />
   <property name="xr.schematron.version.full"
     value="${xr.schematron.version.major.minor}.${xr.schematron.version.patch}" />
 
