--- a/build.xml
+++ b/build.xml
@@ -16,8 +16,8 @@
   <property name="testsuite.instances.dir" location="${test.build.dir}/testsuite" />
 
   <!-- Naming -->
-  <property name="xrechnung.version.major.minor" value="2.0" />
-  <property name="xrechnung.version.patch" value="1" />
+  <property name="xrechnung.version.major.minor" value="2.2" />
+  <property name="xrechnung.version.patch" value="0" />
   <property name="xrechnung.version"
     value="${xrechnung.version.major.minor}.${xrechnung.version.patch}" />
   <property name="cen.spec.id" value="urn:cen.eu:en16931:2017" />
@@ -25,15 +25,18 @@
     value="${cen.spec.id}#compliant#urn:xoev-de:kosit:standard:xrechnung_${xrechnung.version.major.minor}" />
 
 
-  <property name="validator.configuration.version.full" value="2020-12-31" />
+  <property name="validator.configuration.version.full" value="2022-05-31" />
   <property name="dist.name"
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
   <!-- 3rd party resources -->
   <!-- KoSIT XML Validator -->
-  <property name="validator.version" value="1.4.1" />
+  <property name="validator.version" value="1.4.2" />
   <property name="validator.download.url.prefix"
-    value="https://github.com/itplr-kosit/validator/releases/download/" />
-  <!-- Pick by default the standalone distribution -->
+    value="https://github.com/itplr-kosit/validator/releases/download" />
+    
+  <property name="validator.zip" value="validator-${validator.version}-distribution.zip" />
+  
+  <!-- Pick by default the standalone distribution -->  
   <property name="validator.jar" value="validationtool-${validator.version}-standalone.jar" />
 
   <!-- Part of the download path -->
@@ -50,36 +53,41 @@
     value="http://www.unece.org/fileadmin/DAM/cefact/xml_schemas/${cii.schema.zip}" />
   <property name="ubl.version" value="2.1" />
   <property name="ubl.download.url.prefix"
-    value="http://docs.oasis-open.org/ubl/os-UBL-${ubl.version}/" />
+    value="http://docs.oasis-open.org/ubl/os-UBL-${ubl.version}" />
   <property name="ubl.schema.zip" value="UBL-${ubl.version}.zip" />
 
   <property name="ubl.download.url"
     value="${ubl.download.url.prefix}/${ubl.schema.zip}" />
 
-  <!-- set to master if you want latest code -->
-  <property name="cen.rules.version" value="1.3.4" />
+  <!-- set to "master" if you want latest code -->
+  <property name="cen.rules.version" value="1.3.7" />
   <property name="cen.rules.version.download" value="${cen.rules.version}" />
+  <property name="cen.download.url.owner" value="ConnectingEurope" />
   <property name="cen.download.url.prefix"
-    value="https://github.com/ConnectingEurope/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
+    value="https://github.com/${cen.download.url.owner}/eInvoicing-EN16931/releases/download/validation-${cen.rules.version}" />
   <property name="cen.download.url.ubl"
     value="${cen.download.url.prefix}/en16931-ubl-${cen.rules.version.download}.zip" />
   <property name="cen.download.url.cii"
     value="${cen.download.url.prefix}/en16931-cii-${cen.rules.version.download}.zip" />
+  <property name="cen.download.url.master.prefix" value="https://github.com/${cen.download.url.owner}/eInvoicing-EN16931/"/>
+
+
   <!-- XRechnung Schematron Rules section -->
   <!-- build date might get deprecated in future: check on this -->
-  <property name="xrechnung.build.date" value="2020-12-31" />
+  <property name="xrechnung.build.date" value="2022-05-31" />
   <!-- XRechnung Schematron -->
-  <property name="xr.schematron.version.major.minor" value="1.5" />
-  <property name="xr.schematron.version.patch" value="0" />
+  <property name="xr.schematron.version.major.minor" value="1.7" />
+  <property name="xr.schematron.version.patch" value="2" />
   <property name="xr.schematron.version.full"
     value="${xr.schematron.version.major.minor}.${xr.schematron.version.patch}" />
+
   <property name="xr.schematron.download.url.prefix"
     value="https://github.com/itplr-kosit/xrechnung-schematron/releases/download/release-${xr.schematron.version.full}" />
-
   <property name="xr.schematron.zip"
     value="xrechnung-${xrechnung.version}-schematron-${xr.schematron.version.full}.zip" />
+  <property name="xr.schematron.download.url" value="${xr.schematron.download.url.prefix}/${xr.schematron.zip}" />  
 
-  <property name="xr.testsuite.version" value="2020-12-31" />
+  <property name="xr.testsuite.version" value="2022-05-31" />
   <property name="xr.testsuite.download.url.prefix"
     value="https://github.com/itplr-kosit/xrechnung-testsuite/releases/download" />
 
@@ -92,7 +100,10 @@
     location="${resource.dir}/ubl/2.1/xsl/EN16931-UBL-validation.xsl" />
   <property name="resource.xsl.cen.cii"
     location="${resource.dir}/cii/16b/xsl/EN16931-CII-validation.xsl" />
-
+  <property name="resource.xsd.cen.ubl"
+    location="${resource.dir}/ubl/2.1/xsd/maindoc/UBL-Invoice-2.1.xsd" />
+  <property name="resource.xsd.cen.cn"
+    location="${resource.dir}/ubl/2.1/xsd/maindoc/UBL-CreditNote-2.1.xsd" />  
   <property name="resource.xsl.xr.inv"
     location="${resource.xr.dir}/XRechnung-UBL-validation-Invoice.xsl" />
   <property name="resource.xsl.xr.cn"
@@ -208,7 +219,6 @@
     <delete file="${lib.dir}/${saxon.jar}" />
   </target>
 
-  <property name="validator.zip" value="validationtool-${validator.version}.zip" />
 
   <target name="retrieve-validator-from-local-build" depends="init" if="develop.local.validator">
     <get src="${validator.download.url.prefix}/target/${validator.zip}" dest="${download.dir}/"
@@ -238,9 +248,9 @@
   <target name="provide-validator" depends="init, retrieve-validator"
     description="Download KoSIT validation tool and add jar to library directory">
 
-    <echo message="Unpacking Validator reosurces" />
+    <echo message="Unpacking Validator resources" />
 
-    <unzip src="${download.dir}/validationtool-${validator.version}.zip" dest="${lib.dir}">
+    <unzip src="${download.dir}/${validator.zip}" dest="${lib.dir}">
       <patternset>
         <include name="**/${validator.jar}" />
       </patternset>
@@ -295,11 +305,66 @@
   </target>
 
   <target name="retrieve-cen-rules"
-    depends="retrieve-cen-rules-from-master,retrieve-cen-rules-from-release,init" />
+    depends="retrieve-cen-rules-from-master,retrieve-cen-rules-from-release,init" >
+    <fail message="No cen rule zip files available :(!">
+      <condition>
+        <not>
+          <or>
+            <resourceexists>
+              <file file="${download.dir}/master.zip" />
+            </resourceexists>
+            <and>
+              <resourceexists>
+                <file file="${download.dir}/en16931-cii-${cen.rules.version.download}.zip" />
+              </resourceexists>
+              <resourceexists>
+                <file file="${download.dir}/en16931-ubl-${cen.rules.version.download}.zip" />
+              </resourceexists>
+            </and>
+          </or>
+        </not>
+      </condition>
+    </fail>
+    <unzip dest="${download.dir}" failonemptyarchive="true">
+      <!-- If master.zip or the other gets finally extracted depends on download targets -->
+      <fileset dir="${download.dir}">
+        <include name="en16931-*-${cen.rules.version.download}.zip" />
+        <include name="master.zip" />
+      </fileset>
+      
+      <regexpmapper from=".*/(schematron/.*\.sch$$)" to="\1" />
+    </unzip>
+    <!-- Testing if important files were unzipped -->
+    <path id="schematron-path">
+      <fileset dir="${download.dir}" includes="**schematron/**.sch" />
+    </path>
+    <fail
+      message="Could not extract CEN schematron rules file EN16931-UBL-validation.sch does not exist in ${download.dir}">
+      <condition>
+        <not>
+          <available file="EN16931-UBL-validation.sch">
+            <filepath refid="schematron-path" />
+          </available>
+        </not>
+      </condition>
+    </fail>
+    <fail message="Could not extract file EN16931-CII-validation.sch">
+      <condition>
+        <not>
+          <available file="EN16931-CII-validation.sch">
+            <filepath refid="schematron-path" />
+          </available>
+        </not>
+      </condition>
+    </fail>
+    
+  </target>
+
+  
 
   <target name="retrieve-cen-rules-from-master" depends="init" if="${cen.master.target}"
     description="Download CEN business rules (schematron) from master branch to download directory">
-    <get src="https://github.com/CenPC434/validation/archive/master.zip"
+    <get src="${cen.download.url.master.prefix}/archive/master.zip"
       dest="${download.dir}" verbose="true" skipexisting="true"
       usetimestamp="true" />
   </target>
@@ -318,16 +383,16 @@
 
   <target name="retrieve-xrechnung-schematron-from-local-build" depends="init"
     if="develop.local.xr.schematron">
-    <echo message="Loading from file ${xr.schematron.download.url.prefix}/${xr.schematron.zip}" />
+    <echo message="Loading from file ${xr.schematron.download.url}" />
 
-    <get src="${xr.schematron.download.url.prefix}/${xr.schematron.zip}" dest="${download.dir}"
+    <get src="${xr.schematron.download.url}" dest="${download.dir}"
       verbose="true" skipexisting="false" usetimestamp="false" httpusecaches="false" />
   </target>
 
   <target name="retrieve-xrechnung-schematron-from-github-release" depends="init"
     unless="develop.local.xr.schematron">
-    <echo message="Loading from GitHub ${xr.schematron.download.url.prefix}/${xr.schematron.zip}" />
-    <get src="${xr.schematron.download.url.prefix}/${xr.schematron.zip}" dest="${download.dir}"
+    <echo message="Loading from GitHub ${xr.schematron.download.url}" />
+    <get src="${xr.schematron.download.url}" dest="${download.dir}"
       verbose="true" skipexisting="true" usetimestamp="true" />
   </target>
 
@@ -367,59 +432,9 @@
   <target name="retrieve-all-schema-rules"
     depends="retrieve-ubl-schema,retrieve-cen-rules,provide-xrechnung-schematron,retrieve-cii-schema"
     description="Retrieve and preapre all 3rd party XSDs and XSLTs" />
-  <target name="compile-cen-rules" depends="retrieve-cen-rules,prepare-saxon"
-    description="Works for zip from master and release zips">
-    <fail message="No cen rule zip files available :(!">
-      <condition>
-        <not>
-          <or>
-            <resourceexists>
-              <file file="${download.dir}/master.zip" />
-            </resourceexists>
-            <and>
-              <resourceexists>
-                <file file="${download.dir}/en16931-cii-${cen.rules.version.download}.zip" />
-              </resourceexists>
-              <resourceexists>
-                <file file="${download.dir}/en16931-ubl-${cen.rules.version.download}.zip" />
-              </resourceexists>
-            </and>
-          </or>
-        </not>
-      </condition>
-    </fail>
-    <unzip dest="${download.dir}" failonemptyarchive="true">
-      <!-- If master.zip or the other gets finally extracted depends on download targets -->
-      <fileset dir="${download.dir}">
-        <include name="en16931-*-${cen.rules.version.download}.zip" />
-        <include name="master.zip" />
-      </fileset>
-
-      <regexpmapper from=".*/(schematron/.*\.sch$$)" to="\1" />
-    </unzip>
-    <!-- Testing if important files were unzipped -->
-    <path id="schematron-path">
-      <fileset dir="${download.dir}" includes="**schematron/**.sch" />
-    </path>
-    <fail
-      message="Could not extract CEN schematron rules file EN16931-UBL-validation.sch does not exist in ${download.dir}">
-      <condition>
-        <not>
-          <available file="EN16931-UBL-validation.sch">
-            <filepath refid="schematron-path" />
-          </available>
-        </not>
-      </condition>
-    </fail>
-    <fail message="Could not extract file EN16931-CII-validation.sch">
-      <condition>
-        <not>
-          <available file="EN16931-CII-validation.sch">
-            <filepath refid="schematron-path" />
-          </available>
-        </not>
-      </condition>
-    </fail>
+  
+  <target name="compile-cen-rules-only" description="Works for zip from master and release zips">
+    
     <schematron-compile schematron="${download.dir}/schematron/EN16931-UBL-validation.sch"
       insuffix="sch" workdir="${build.dir}/schematron" outdir="${build.dir}" />
     <schematron-compile schematron="${download.dir}/schematron/EN16931-CII-validation.sch"
@@ -439,6 +454,9 @@
       <factory name="net.sf.saxon.TransformerFactoryImpl" />
     </xslt>
   </target>
+
+  <target name="compile-cen-rules" depends="retrieve-cen-rules,prepare-saxon,compile-cen-rules-only"
+    description="Works for zip from master and release zips"/>
 
 
   <target name="compile-scenario" depends="init">
@@ -495,7 +513,7 @@
 
     <filter token="xrechnung.spec.id" value="${xrechnung.spec.id}" />
     <copy todir="${test.build.dir}" failonerror="true" filtering="true">
-      <fileset dir="${test.src.dir}">
+      <fileset dir="${test.src.dir}" casesensitive="false">
         <include name="**/*.xml" />
       </fileset>
     </copy>
@@ -547,6 +565,8 @@
       <arg value="-r" />
       <arg value="${build.dir}" />
       <arg value="--html" />
+      <arg value="--log-level" />
+      <arg value="info" />
       <arg value="--check-assertions" />
       <arg value="${test.src.dir}/assertions.xml" />
       <arg value="-o" />
@@ -602,7 +622,8 @@
     description="Test Schematron Rules with XML-Mutate" if="xmute.download.url.prefix">
     <echo>Generate test instances with expected behaviour ...</echo>
     <java jar="${lib.dir}/${xmute.jar}" failonerror="true" fork="true" dir="${basedir}">
-
+      <arg value="--schema" />
+      <arg value="{resource.xsd.cen.cn}"/>
       <arg value="--schematron" />
       <arg value="xrinv=${resource.xsl.xr.inv}" />
       <arg value="--schematron" />
@@ -613,6 +634,25 @@
       <arg value="cencii=${resource.xsl.cen.cii}" />
       <arg value="--target ${test.docs.dir}/generated" />
       <arg value="${test.docs.cen.unit.dir}" />
+    </java>
+  </target>
+
+  <target name="test-bt-11" depends="compile, init-test, retrieve-xmute"
+    description="Test Schematron Rules with XML-Mutate" if="xmute.download.url.prefix">
+    <echo>Generate test instances with expected behaviour ...</echo>
+    <java jar="${lib.dir}/${xmute.jar}" failonerror="true" fork="true" dir="${basedir}">
+      <arg value="--schema" />
+      <arg value="/Users/lukas/Documents/LAVA/XRechnung/validator-configuration-xrechnung/build/resources/ubl/2.1/xsd/maindoc/UBL-CreditNote-2.1.xsd"/>
+      <arg value="--schematron" />
+      <arg value="xrinv=${resource.xsl.xr.inv}" />
+      <arg value="--schematron" />
+      <arg value="xrcn=${resource.xsl.xr.cn}" />
+      <arg value="--schematron" />
+      <arg value="ceninv=${resource.xsl.cen.ubl}" />
+      <arg value="--schematron" />
+      <arg value="cencii=${resource.xsl.cen.cii}" />
+      <arg value="--target ${test.docs.dir}/generated" />
+      <arg value="${test.docs.cen.unit.dir}/ubl-cn-negative-test-bt-11.xml" />
     </java>
   </target>
 
@@ -630,11 +670,13 @@
         <!-- Local files - not in repository -->
         <include name="XRechnung-CEFACT*.xml"/>
       </fileset>
+      <fileset dir="${test.src.dir}/integration"></fileset>
     </copy>
-
+    
     <echo>Creating validation reports with ${lib.dir}/${validator.jar} for ${test.docs.integration.dir}</echo>
     <java jar="${lib.dir}/${validator.jar}" failonerror="true" fork="true" dir="${build.dir}">
-      <arg value="-X" />
+      <arg value="-l" />
+      <arg value="debug" />
       <arg value="-s" />
       <arg value="scenarios.xml" />
       <arg value="-r" />
