--- a/build.xml
+++ b/build.xml
@@ -26,7 +26,7 @@
     value="${cen.spec.id}#compliant#urn:xoev-de:kosit:standard:xrechnung_${xrechnung.version.major.minor}" />
 
 
-  <property name="validator.configuration.version.full" value="2022-07-15-SNAPSHOT" />
+  <property name="validator.configuration.version.full" value="2022-07-15" />
   <property name="dist.name"
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
   <!-- 3rd party resources -->
@@ -88,7 +88,7 @@
     value="xrechnung-${xrechnung.version}-schematron-${xr.schematron.version.full}.zip" />
   <property name="xr.schematron.download.url" value="${xr.schematron.download.url.prefix}/${xr.schematron.zip}" />  
 
-  <property name="xr.testsuite.version" value="2022-05-31" />
+  <property name="xr.testsuite.version" value="2022-07-15" />
   <property name="xr.testsuite.download.url.prefix"
     value="https://github.com/itplr-kosit/xrechnung-testsuite/releases/download" />
 
