current build.xml

--- a/build.xml
+++ b/build.xml
@@ -98,10 +98,7 @@
     location="${resource.dir}/ubl/2.1/xsl/EN16931-UBL-validation.xsl" />
   <property name="resource.xsl.cen.cii"
     location="${resource.dir}/cii/16b/xsl/EN16931-CII-validation.xsl" />
-  <property name="resource.xsd.cen.ubl"
-    location="${resource.dir}/ubl/2.1/xsd/maindoc/UBL-Invoice-2.1.xsd" />
-  <property name="resource.xsd.cen.cn"
-    location="${resource.dir}/ubl/2.1/xsd/maindoc/UBL-CreditNote-2.1.xsd" />  
+
   <property name="resource.xsl.xr.inv"
     location="${resource.xr.dir}/XRechnung-UBL-validation-Invoice.xsl" />
   <property name="resource.xsl.xr.cn"
@@ -615,21 +612,19 @@
 
 
 
-  <target name="test-mutations" depends="compile, init-test, retrieve-xmute"
+  <target name="test-cen-expected-behaviour" depends="compile, init-test, retrieve-xmute"
     description="Test Schematron Rules with XML-Mutate" if="xmute.download.url.prefix">
-    <echo>Generate test instances with expected behaviour ...</echo>
+    <echo>Generate and test instances with expected behaviour ...</echo>
     <java jar="${lib.dir}/${xmute.jar}" failonerror="true" fork="true" dir="${basedir}">
 
       <arg value="--schematron" />
       <arg value="xrinv=${resource.xsl.xr.inv}" />
       <arg value="--schematron" />
-      <arg value="xrcn=${resource.xsl.xr.cn}" />
-      <arg value="--schematron" />
       <arg value="ceninv=${resource.xsl.cen.ubl}" />
       <arg value="--schematron" />
       <arg value="cencii=${resource.xsl.cen.cii}" />
       <arg value="--target ${test.docs.dir}/generated" />
-      <arg value="${test.docs.cen.unit.dir}/ubl-cn-negative-test-bt-11.xml" />
+      <arg value="${test.docs.cen.unit.dir}" />
     </java>
   </target>
 
