added cn schema

--- a/build.xml
+++ b/build.xml
@@ -98,7 +98,10 @@
     location="${resource.dir}/ubl/2.1/xsl/EN16931-UBL-validation.xsl" />
   <property name="resource.xsl.cen.cii"
     location="${resource.dir}/cii/16b/xsl/EN16931-CII-validation.xsl" />
-
+  <property name="resource.xsd.cen.ubl" 
+    location="${resource.dir}/ubl/2.1/xsd/maindoc/UBL-Invoice-2.1.xsd" /> 
+  <property name="resource.xsd.cen.cn" 
+    location="${resource.dir}/ubl/2.1/xsd/maindoc/UBL-CreditNote-2.1.xsd" />
   <property name="resource.xsl.xr.inv"
     location="${resource.xr.dir}/XRechnung-UBL-validation-Invoice.xsl" />
   <property name="resource.xsl.xr.cn"
@@ -616,7 +619,8 @@
     description="Test Schematron Rules with XML-Mutate" if="xmute.download.url.prefix">
     <echo>Generate and test instances with expected behaviour ...</echo>
     <java jar="${lib.dir}/${xmute.jar}" failonerror="true" fork="true" dir="${basedir}">
-
+      <!--<arg value="-/-schema" /> 
+      <arg value="{resource.xsd.cen.cn}"/>-->      
       <arg value="--schematron" />
       <arg value="xrinv=${resource.xsl.xr.inv}" />
       <arg value="--schematron" />
@@ -636,7 +640,8 @@
     description="Test for unexpected behaviour in CEN Schematron Rules">
     <echo>Generate and test instances with unexpected behaviour ...</echo>
     <java jar="${lib.dir}/${xmute.jar}" failonerror="true" fork="true" dir="${basedir}">
-
+      <!--<arg value="-/-schema" /> 
+      <arg value="{resource.xsd.cen.cn}"/>--> 
       <arg value="--schematron" />
       <arg value="xrinv=${resource.xsl.xr.inv}" />
       <arg value="--schematron" />
