--- a/build.xml
+++ b/build.xml
@@ -28,7 +28,7 @@
   <property name="xrechnung.extension.id"
     value="${xrechnung.spec.id}#conformant#urn:xoev-de:kosit:extension:xrechnung_${xrechnung.version.major.minor}" />
 
-  <property name="validator.configuration.version.full" value="2023-04-31-SNAPSHOT" />
+  <property name="validator.configuration.version.full" value="2023-05-12" />
   <property name="dist.name"
     value="validator-configuration-xrechnung_${xrechnung.version}_${validator.configuration.version.full}.zip" />
   <!-- 3rd party resources -->
@@ -77,7 +77,7 @@
 
   <!-- XRechnung Schematron Rules section -->
   <property name="xr.schematron.version.major.minor" value="1.8" />
-  <property name="xr.schematron.version.patch" value="1" />
+  <property name="xr.schematron.version.patch" value="2" />
   <property name="xr.schematron.version.full"
     value="${xr.schematron.version.major.minor}.${xr.schematron.version.patch}" />
 
@@ -88,6 +88,7 @@
   <property name="xr.schematron.download.url" value="${xr.schematron.download.url.prefix}/${xr.schematron.zip}" />  
 
   <property name="xr.testsuite.version" value="2023-01-31" />
+  <property name="xr.testsuite.version" value="2023-05-12" />
   <property name="xr.testsuite.download.url.prefix"
     value="https://github.com/itplr-kosit/xrechnung-testsuite/releases/download" />
 
