--- a/build.xml
+++ b/build.xml
@@ -24,9 +24,9 @@
     value="${xrechnung.version.major.minor}.${xrechnung.version.patch}" />
   <property name="cen.spec.id" value="urn:cen.eu:en16931:2017" />
   <property name="xrechnung.spec.id"
-    value="${cen.spec.id}#compliant#urn:xoev-de:kosit:standard:xrechnung_${xrechnung.version.major.minor}" />
+    value="${cen.spec.id}#compliant#urn:xeinkauf.de:kosit:xrechnung_${xrechnung.version.major.minor}" />
   <property name="xrechnung.extension.id"
-    value="${xrechnung.spec.id}#conformant#urn:xoev-de:kosit:extension:xrechnung_${xrechnung.version.major.minor}" />
+    value="${xrechnung.spec.id}#conformant#urn:xeinkauf.de:kosit:extension:xrechnung_${xrechnung.version.major.minor}" />
 
   <property name="validator.configuration.version.full" value="2023-07-31" />
   <property name="dist.name"
