--- a/build.xml
+++ b/build.xml
@@ -671,6 +671,7 @@
         <include name="cii-br-s-08-rounding-rule.xml"/>
         <include name="ubl-br-dex-2-false-negative.xml"/>
         <include name="cii-bt-20-cardinality-check.xml"/>
+        <include name="cii-bt-20-cardinality-check-2.xml"/>
         <!-- Local files - not in repository -->
         <include name="XRechnung-CEFACT*.xml"/>
       </fileset>
