--- a/build.xml
+++ b/build.xml
@@ -472,6 +472,7 @@
     <filter token="xrechnung.version" value="${xrechnung.version}" />
     <filter token="xrechnung.spec.id" value="${xrechnung.spec.id}" />
     <filter token="xrechnung.extension.id" value="${xrechnung.extension.id}" />
+    <filter token="xrechnung.cvd.id" value="${xrechnung.cvd.id}" />
     <filter token="ubl.version" value="${ubl.version}" />
     <filter token="ubl.download.url" value="${ubl.download.url}" />
     <filter token="cii.version" value="${cii.version}" />
